1. MacOS and Linux open R correctly 2. Temporarily roll back to previous way of opening application.